# claimfarm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-build.yml
.streamlit/: config.toml
app/: __init__.py  api_admin.py  api_billing.py  api_claims.py  api_farmers.py  api_gdpr.py  api_identity.py  api_invites.py  api_keys_routes.py  api_magic_link.py  config.py  logging_setup.py  main.py  middlewares.py
app/agents/: agronomy_rag.py  claim_drafter.py  (+7 more)
dashboard/: app.py  main.py
data/: demo_seed.json
deploy/: README.md  fc-env-vars.txt  fc_update_image.py
docs/: alibaba-cloud-proof.md  api.md  architecture.md  demo-video-script.md  deployment.md  onboarding.md  security.md
mock_insurer/: main.py
qa-audit/: USER_ACTION_REQUIRED.md  api-security.md  auth-dashboard.md  claims-pipeline.md  defects.json  feature-inventory.md  final-report.md  retest-plan.md  verification.md  web-ux.md
scripts/: reindex_claims.py  seed_agronomy_kb.py  seed_demo_claim.py  test_claim_pdf.py  test_damage.py  test_forensics.py  test_insurer_flow.py  test_multilingual.py  test_rag.py  test_weather.py
tests/: conftest.py  test_api_endpoints.py  test_apisec_headers.py  test_apisec_webhooks.py  test_audit_log.py  test_authdash_rbac.py  test_bot_registration.py  test_claims_pipeline.py  test_farmer_profiles.py  test_identity_mock.py  test_invites.py  test_notifications.py  test_passwords.py  test_perceptual_hash.py  test_sec007_dev_links.py
web/: next.config.ts  package.json  pnpm-lock.yaml
(+87 files in other folders)
