[project]
name = "claimfarm"
version = "0.1.0"
description = "AI agent that turns a smallholder farmer's WhatsApp photo into a filed crop insurance claim"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Hemnaath Balasubramani" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "openai>=1.54",            # DashScope/Qwen Cloud is OpenAI-compatible
    "dashvector>=1.0",         # Alibaba DashVector client
    "oss2>=2.19",              # Alibaba OSS client
    "twilio>=9.3",
    "weasyprint>=63",
    "jinja2>=3.1",
    "streamlit>=1.40",
    "sqlmodel>=0.0.22",
    "python-dotenv>=1.0",
    "chromadb>=1.5.9",
    "argon2-cffi>=25.1.0",
    "structlog>=26.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "dashboard", "mock_insurer"]

[tool.ruff]
line-length = 100
target-version = "py311"
